[tool.poetry]
name = "hyperpcr"
packages = [
    {include = "pcr"}
]
version = "0.3.7"
description = "Point Cloud Reconstruction with HyperNetwork"
authors = ["andrearosasco <andrea.rosasco@iit.it>"]

[tool.poetry.dependencies]
python = "^3.6"
timm = "^0.5.4"
rich = "^12.2.0"
requests = "^2.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
